[tool.poetry]
name = "root"
version = "0.1.0"
description = ""
authors = ["Your Name [you@example.com](mailto:you@example.com)"]
readme = "[README.md](http://readme.md/)"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "<1.24"
torch = {url = "https://download.pytorch.org/whl/cu117/torch-2.0.0%2Bcu117-cp310-cp310-linux_x86_64.whl"}
torchvision = {url = "https://download.pytorch.org/whl/cu117/torchvision-0.15.0%2Bcu117-cp310-cp310-linux_x86_64.whl"}
pillow = "^9.5.0"
blobfile = "^2.0.2"
tqdm = "^4.65.0"
pyyaml = "^6.0"
tensorboard = "^2.13.0"
scipy = "^1.10.1"
diffusers = "^0.17.1"
transformers = "^4.30.2"
matplotlib = "^3.7.2"
ipython = "^8.14.0"
accelerate = "^0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"