[tool.poetry]
name = "root"
version = "0.1.0"
description = ""
authors = ["Your Name [you@example.com](mailto:you@example.com)"]
readme = "[README.md](http://readme.md/)"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "<1.24"
torch = {url = "https://download.pytorch.org/whl/cu117/torch-2.0.0%2Bcu117-cp310-cp310-linux_x86_64.whl"}
torchvision = {url = "https://download.pytorch.org/whl/cu117/torchvision-0.15.0%2Bcu117-cp310-cp310-linux_x86_64.whl"}
pillow = "^9.5.0"
blobfile = "^2.0.2"
tqdm = "^4.65.0"
pyyaml = "^6.0"
tensorboard = "^2.13.0"
scipy = "^1.10.1"
diffusers = "^0.17.1"
transformers = "^4.30.2"
matplotlib = "^3.7.2"
ipython = "^8.14.0"
accelerate = "^0.22.0"
mypy = "^1.5.1"
flake8 = "^6.1.0"
torchtyping = "^0.1.4"
seaborn = "^0.12.2"
opencv-python = "4.7.0.68"
lpips = "^0.1.4"
scikit-image = "^0.22.0"
torchmetrics = {extras = ["image"], version = "^1.2.0"}
clip-interrogator = "0.6.0"
open-clip-torch = "^2.23.0"

[tool.poetry.group.dev.dependencies]
types-pillow = "^10.1.0.1"
types-tqdm = "^4.66.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"